[gd_scene load_steps=2 format=3 uid="uid://bxcqh27nc24r"]

[ext_resource type="Script" uid="uid://cmqicdb0gwkk7" path="res://scripts/LobbyUI.gd" id="1_o1atq"]

[node name="LobbyUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o1atq")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(20, 20)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Lobby del juego"

[node name="LobbyInfo" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "No est√°s en un lobby"
horizontal_alignment = 1

[node name="NameContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/NameContainer"]
layout_mode = 2
text = "Tu nombre: "

[node name="NameInput" type="LineEdit" parent="MarginContainer/VBoxContainer/NameContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="ColorContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ColorContainer"]
layout_mode = 2
text = "Tu color:"

[node name="ColorPicker" type="ColorPickerButton" parent="MarginContainer/VBoxContainer/ColorContainer"]
layout_mode = 2
color = Color(0.43821898, 0.01906553, 0.2853025, 1)
edit_alpha = false

[node name="LobbyTypeContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/LobbyTypeContainer"]
layout_mode = 2
text = "Tipo de lobby"

[node name="SteamLobbyButton" type="Button" parent="MarginContainer/VBoxContainer/LobbyTypeContainer"]
layout_mode = 2
toggle_mode = true
button_pressed = true
text = "Steam"

[node name="LANLobbyButton" type="Button" parent="MarginContainer/VBoxContainer/LobbyTypeContainer"]
layout_mode = 2
toggle_mode = true
text = "LAN"

[node name="LANContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="IPContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/LANContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/LANContainer/IPContainer"]
layout_mode = 2
text = "IP:"

[node name="IPInput" type="LineEdit" parent="MarginContainer/VBoxContainer/LANContainer/IPContainer"]
layout_mode = 2
text = "127.0.0.1"

[node name="PortContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/LANContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/LANContainer/PortContainer"]
layout_mode = 2
text = "Puerto:"

[node name="PortInput" type="LineEdit" parent="MarginContainer/VBoxContainer/LANContainer/PortContainer"]
layout_mode = 2
text = "7777"

[node name="ButtonsContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CreateLobbyButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsContainer"]
layout_mode = 2
text = "Crear Lobby"

[node name="JoinLobbyButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsContainer"]
layout_mode = 2
text = "Buscar Lobby"

[node name="LeaveLobbyButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsContainer"]
visible = false
layout_mode = 2
text = "Salir del lobby"

[node name="StartGameButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsContainer"]
visible = false
layout_mode = 2
text = "Iniciar partida"

[node name="SteamUI" type="Button" parent="MarginContainer/VBoxContainer/ButtonsContainer"]
layout_mode = 2
text = "Iniciar UI Steam"

[node name="PlayersContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/PlayersContainer"]
layout_mode = 2
text = "Jugadores:"

[node name="PlayersList" type="ItemList" parent="MarginContainer/VBoxContainer/PlayersContainer"]
custom_minimum_size = Vector2(300, 150)
layout_mode = 2
